# eddy-v2

./: .gitignore  AGENTS.md  CONTEXT.md  EDDY-PLAYBOOK.md  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: BAKEOFF.md  research-notes.md
docs/adr/: 0001-separate-public-v2-repo.md  0002-cloud-first-receipts.md  0003-hyperframes-identities.md  0004-descript-verified-audio.md
mcp/: eddy-v2.config.json
renderer/: hyperframes-runner.mjs
scripts/: contract_audit.py  public_scrub_check.py
skills/eddy-v2/: SKILL.md
src/eddy_v2/: __init__.py  audio.py  audio_retry.py  bakeoff.py  captions.py  cli.py  cloud_quality.py  commands.py  cost.py  doctor.py  identities.py  mcp_server.py  models.py  motion.py  pipeline.py  plan.py  policy.py  proof.py  provenance.py  qa.py  quality_review.py  receipts.py  render.py  review.py  run_summary.py  sources.py  transcript.py
src/eddy_v2/identities_data/broadcast-receipts/: blocks.json  frame.md  identity.css
src/eddy_v2/identities_data/code-cinema/: blocks.json  frame.md  identity.css
src/eddy_v2/identities_data/editorial-data/: blocks.json  font-face.css  frame.md  identity.css
src/eddy_v2/identities_data/kinetic-poster/: blocks.json  frame.md  identity.css
src/eddy_v2/identities_data/liquid-glass/: blocks.json  frame.md  identity.css
src/eddy_v2/identities_data/threadify-fc/: blocks.json  font-face.css  frame.md  identity.css
tests/: test_contract.py
