[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eddy-v2"
version = "0.1.0"
description = "Proof-gated autonomous YouTube editing with HyperFrames motion"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Lennox Saint" }]
dependencies = []

[project.optional-dependencies]
dev = ["mypy>=1.11", "pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[project.scripts]
eddy = "eddy_v2.cli:main"
eddy-v2-mcp = "eddy_v2.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eddy_v2 = [
    "identities_data/*/*",
    "identities_data/*/assets/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
